--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Ali Shata</a>.
+    Coded by <a href="https://www.twitter.com/alishata128">Ali Shata</a>.
   </div>
 
   <div class="qr-container">
